# watermarker

./: .gitignore  README.md  main.py  main_app.py  main_frame.py  photos_picker.py  preview.py  pyproject.toml  resize_img.py  save_img.py  test.py  watermark_picker.py  watermarker.py
frames/: main_frame.py  photos_picker.py  preview.py  test.py  utilities.py  watermark_picker.py
